# random-streamers

./: README.MD  __init__.py  main.py  pyproject.toml  random-datastreamer.code-workspace  requirements.txt  setup.cfg  setup.py
flaskr/: app.py
flaskr/templates/: base.html
static/: openapi.yaml
templates/: base.html
