[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool]
[tool.poetry]
authors = ["https://github.com/adamd1985"]
description = "This server will create random streams of data that you can use in challenges or tests."
name = "python-template"
version = "0.1.0"
[tool.poetry.dependencies]
Flask = "2.0.2"
python = "^3.8"
[tool.poetry.dev-dependencies]
