[tool.poetry]
name = "random-streamers"
version = "0.1.0"
description = "This server will create random streams of data that you can use in challenges or tests."
authors = ["https://github.com/adamd1985"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
Flask-Cors = "^3.0.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
